@@ -155,11 +155,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.9.0</version>
                 <configuration>
+                    <encoding>UTF-8</encoding>
                     <source>17</source>
                     <target>17</target>
                     <compilerArgs>
                         <arg>--add-exports</arg>
                         <arg>javafx.controls/com.sun.javafx.scene.control.skin.resources=pl.edu.ur.pz.clinicapp</arg>
+                        <arg>--add-opens</arg>
+                        <arg>java.base/java.util=pl.edu.ur.pz.clinicapp</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
